--- a/src/main/webapp/vistas/catalogoimagenes/CreateSolic.xhtml
+++ b/src/main/webapp/vistas/catalogoimagenes/CreateSolic.xhtml
@@ -7,7 +7,6 @@
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
-
         <p:dialog id="CatalogoimagenesCreateDlg" widgetVar="CatalogoimagenesCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundleCatalogoImg.CreateCatalogoimagenesTitle}">
             <h:form id="CatalogoimagenesCreateForm">
                 <h:panelGroup id="display">
@@ -25,7 +24,7 @@
                         <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_resolucion}" for="resolucion" />
                         <p:inputText id="resolucion" value="#{catalogoimagenesController.selected.resolucion}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_resolucion}" />
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{catalogoimagenesController.create}" action="#{solicitudesInternetController.init()}" value="#{bundleCatalogoImg.Save}" update="display,:SolicitudesInternetCreateForm:craateForC:ctlgImg,:growl" oncomplete="handleSubmit(args,'CatalogoimagenesCreateDialog');"/>
+                    <p:commandButton actionListener="#{catalogoimagenesController.create}"  value="#{bundleCatalogoImg.Save}" update="display,:SolicitudesInternetCreateForm:craateForC:ctlgImg,:growl" oncomplete="handleSubmit(args,'CatalogoimagenesCreateDialog');"/>
                     <p:commandButton value="#{bundleCatalogoImg.Cancel}" oncomplete="handleSubmit(args,'CatalogoimagenesCreateDialog');"/>
                 </h:panelGroup>
             </h:form>
@@ -33,3 +32,5 @@
 
     </ui:composition>
 </html>
+
+  
