--- a/src/main/webapp/vistas/solicitudesInternet/List.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/List.xhtml
@@ -90,6 +90,12 @@
                             </f:facet>
                             <h:outputText value="#{item.nivel}"/>
                         </p:column>
+                        <p:column filterBy="#{item.controlsolicitudes.idpersonalatencion.usuario}">
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListSolicitudesInternetTitle_nivel}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.controlsolicitudes.idpersonalatencion.usuario}"/>
+                        </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{solicitudesInternetController.destroy}" oncomplete="#{catalogoimagenesController.setImgSelect(null)}" update=":growl,datalist" disabled="#{empty solicitudesInternetController.selected}"/>
                         </f:facet>
